# OpenGL-Snake

./: CMakeLists.txt  Game.cpp  GameLevel.cpp  GameObject.cpp  README.md  SpriteRenderer.cpp  glad.c  main.cpp  resource_manager.cpp  shader.cpp  texture.cpp
include/: Game.h  GameLevel.h  GameObject.h  Keys.h  SpriteRenderer.h  main.h  resource_manager.h  shader.h  texture.h
include/glad/: glad.h
